@@ -94,6 +94,12 @@ Class methods:
 
     Return the definition of each field on the model.
 
+.. classmethod:: Model.__names__([field])
+
+    Returns a dictionary with the name of the `model` and the `field`.
+    It is a convenient method to format message which should include those
+    names.
+
 Instance methods:
 
 .. method:: Model.on_change(fieldnames)
