@@ -887,27 +887,6 @@ class ModelStorage(Model):
         return True
 
     @classmethod
-    def _get_error_args(cls, field_name):
-        pool = Pool()
-        ModelField = pool.get('ir.model.field')
-        error_args = {
-            'field': field_name,
-            'model': cls.__name__
-            }
-        if ModelField:
-            model_fields = ModelField.search([
-                        ('name', '=', field_name),
-                        ('model.model', '=', cls.__name__),
-                        ], limit=1)
-            if model_fields:
-                model_field, = model_fields
-                error_args.update({
-                        'field': model_field.field_description,
-                        'model': model_field.model.name,
-                        })
-        return error_args
-
-    @classmethod
     def validate(cls, records):
         pass
 
@@ -1038,7 +1017,7 @@ class ModelStorage(Model):
                                 ])
                     if sub_relations != set(finds):
                         cls.raise_user_error('domain_validation_record',
-                            error_args=cls._get_error_args(field.name))
+                            error_args=cls.__names__(field.name))
 
         field_names = set(field_names or [])
         function_fields = {name for name, field in cls._fields.items()
@@ -1066,15 +1045,15 @@ class ModelStorage(Model):
                             'Field %s of %s is required' %
                             (field_name, cls.__name__))
                         cls.raise_user_error('required_validation_record',
-                            error_args=cls._get_error_args(field_name))
+                            error_args=cls.__names__(field_name))
                     if (field._type == 'reference'
                             and not isinstance(value, ModelStorage)):
                         cls.raise_user_error('required_validation_record',
-                            error_args=cls._get_error_args(field_name))
+                            error_args=cls.__names__(field_name))
                     if (field._type == 'reference'
                             and not isinstance(value, ModelStorage)):
                         cls.raise_user_error('required_validation_record',
-                            error_args=cls._get_error_args(field_name))
+                            error_args=cls.__names__(field_name))
                 # validate states required
                 if field.states and 'required' in field.states:
                     if is_pyson(field.states['required']):
@@ -1117,14 +1096,14 @@ class ModelStorage(Model):
                             field_size = field.size
                         size = len(getattr(record, field_name) or '')
                         if (size > field_size >= 0):
-                            error_args = cls._get_error_args(field_name)
+                            error_args = cls.__names__(field_name)
                             error_args['size'] = size
                             cls.raise_user_error('size_validation_record',
                                 error_args=error_args)
 
                 def digits_test(value, digits, field_name):
                     def raise_user_error(value):
-                        error_args = cls._get_error_args(field_name)
+                        error_args = cls.__names__(field_name)
                         error_args['digits'] = digits[1]
                         error_args['value'] = repr(value)
                         cls.raise_user_error('digits_validation_record',
@@ -1185,7 +1164,7 @@ class ModelStorage(Model):
                             logging.getLogger().debug('Bad Selection : field '
                                     '%s of model %s : %s is not in %s' % (
                                         field_name, cls.__name__, value, test))
-                            error_args = cls._get_error_args(field_name)
+                            error_args = cls.__names__(field_name)
                             error_args['value'] = value
                             cls.raise_user_error('selection_validation_record',
                                 error_args=error_args)
@@ -1197,7 +1176,7 @@ class ModelStorage(Model):
                         value = value.time()
                     if value != datetime.datetime.strptime(
                             value.strftime(format), format).time():
-                        error_args = cls._get_error_args(field_name)
+                        error_args = cls.__names__(field_name)
                         error_args['value'] = value
                         cls.raise_user_error('time_format_validation_record',
                             error_args=error_args)
