@@ -1,3 +1,4 @@
+* Add Model.__names__ to retrieve model and field names
 * Add resources method to ModelStorage
 
 Version 5.0.2 - 2018-12-02
